# network-analysis

./: .env  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  docker-compose.yml  host_to_container_bridge.sh  readme.md
.github/workflows/: rust.yml
analysis/: Cargo.toml
analysis/src/: database.rs  ethernet_frame.rs  main.rs
analysis/src/ip_protocol/: ip_protocol.rs  ipv4.rs  ipv6.rs  mod.rs
signal/: Cargo.toml
signal-client/: Cargo.toml
signal-client/src/: main.rs
signal-server/: Cargo.toml
signal-server/src/: main.rs
signal/cert/: domain.txt  readme.md
signal/src/: client.rs  main.rs
signal/tls/: ca.pem  create_self_signed_certificate.sh  domain.txt  readme.md  rootCA.crt  server.crt  server.key  server.pem  server_cert_ext.cnf
