[package]
name = "signal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
hyper = "0.14"
hyper-openssl = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10"
tower = "0.4"
pretty_env_logger = "*"
async-stream = "0.3"
tokio-openssl = "0.6"
futures = { version = "0.3", default-features = false }

tonic-openssl = { git = "https://github.com/LucioFranco/tonic-openssl.git" }


[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"